# ground-control

./: .env.example  .gitignore  README.md  gc.yaml  pyproject.toml
agents/: architect.md  developer.md  product-manager.md  reviewer.md
ground_control/: __init__.py  agent_manager.py  cli.py  config.py  env.py  orchestrator.py  planner.py  state.py  task_queue.py
ground_control/implementers/: __init__.py  base.py  claude_code.py  cursor_cli.py
ground_control/llm/: __init__.py  anthropic.py  base.py  openai.py
ground_control/ticket_sources/: __init__.py  base.py  local_yaml.py
projects/: example.yaml  example.yaml.template
tests/: test_integration.py
